// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Projects Page Should Render Projects page 1`] = `
<p>
  Resume
</p>
`;

exports[`Resume Page Should Render Resume page 1`] = `
<p>
  About
</p>
`;
